Partial_14Dec2021/force-app/main/default/objects/Town_Master__c/Town_Master__c.object-meta.xml
<CustomObject>
    <label>Town Master</label>
    <nameField>
        <label>Town Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Town Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>