Partial_14Dec2021/force-app/main/default/objects/Town_Master__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Dharmapuri</fullName>
            </value>
            <value>
                <fullName>krishnagiri</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Hosur</fullName>
            </value>
            <value>
                <fullName>Bandra(Mumbai Suburban district)</fullName>
            </value>
            <value>
                <fullName>Tirupathi</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Kuppam</fullName>
            </value>
            <value>
                <fullName>Erode</fullName>
            </value>
            <value>
                <fullName>Mangalore</fullName>
            </value>
            <value>
                <fullName>Bantval</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Adilabad</fullName>
                <isActive>false</isActive>
                <label>Adilabad</label>
            </value>
            <value>
                <fullName>Agra</fullName>
                <isActive>false</isActive>
                <label>Agra</label>
            </value>
            <value>
                <fullName>Ahmadabad</fullName>
                <isActive>false</isActive>
                <label>Ahmadabad</label>
            </value>
            <value>
                <fullName>Ahmadnagar</fullName>
                <isActive>false</isActive>
                <label>Ahmadnagar</label>
            </value>
            <value>
                <fullName>Aizawl</fullName>
                <isActive>false</isActive>
                <label>Aizawl</label>
            </value>
            <value>
                <fullName>Ajmer</fullName>
                <isActive>false</isActive>
                <label>Ajmer</label>
            </value>
            <value>
                <fullName>Akola</fullName>
                <isActive>false</isActive>
                <label>Akola</label>
            </value>
            <value>
                <fullName>Alappuzha</fullName>
                <isActive>false</isActive>
                <label>Alappuzha</label>
            </value>
            <value>
                <fullName>Aligarh</fullName>
                <isActive>false</isActive>
                <label>Aligarh</label>
            </value>
            <value>
                <fullName>Allahabad</fullName>
                <isActive>false</isActive>
                <label>Allahabad</label>
            </value>
            <value>
                <fullName>Almora</fullName>
                <isActive>false</isActive>
                <label>Almora</label>
            </value>
            <value>
                <fullName>Alwar</fullName>
                <isActive>false</isActive>
                <label>Alwar</label>
            </value>
            <value>
                <fullName>Ambala</fullName>
                <isActive>false</isActive>
                <label>Ambala</label>
            </value>
            <value>
                <fullName>Ambedkar Nagar</fullName>
                <isActive>false</isActive>
                <label>Ambedkar Nagar</label>
            </value>
            <value>
                <fullName>Amravati</fullName>
                <isActive>false</isActive>
                <label>Amravati</label>
            </value>
            <value>
                <fullName>Amreli</fullName>
                <isActive>false</isActive>
                <label>Amreli</label>
            </value>
            <value>
                <fullName>Amritsar</fullName>
                <isActive>false</isActive>
                <label>Amritsar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>