Partial_14Dec2021/force-app/main/default/objects/Town_Master__c/fields/District_Code__c.field-meta.xml
<CustomField>
    <fullName>District_Code__c</fullName>
    <label>District Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>