Partial_14Dec2021/force-app/main/default/objects/Town_Master__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Town Master</relationshipLabel>
    <relationshipName>Town_Master</relationshipName>
    <type>Lookup</type>
</CustomField>