Partial_14Dec2021/force-app/main/default/objects/Town_Master__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>