Partial_14Dec2021/force-app/main/default/objects/Town_Master__c/fields/Town_code__c.field-meta.xml
<CustomField>
    <fullName>Town_code__c</fullName>
    <label>Town code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>