Partial_14Dec2021/force-app/main/default/objects/Town_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>District__c</columns>
    <columns>Town_code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>